#66 Added memory for the build